--- a/src/main/resources/templates/post_details.html
+++ b/src/main/resources/templates/post_details.html
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="comment289-box">
-                    <h3>Leave A Reply</h3>
+                    <h3>Leave a Comment</h3>
                     <hr>
                     <div class="row">
                         <!--                        You are commenting as **** part here -->
