--- a/src/main/resources/templates/edit_topic.html
+++ b/src/main/resources/templates/edit_topic.html
@@ -41,12 +41,12 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="ask-question-input-part032">
-                    <h4>Edit Topic Question</h4>
+                    <h4>Edit Topic</h4>
                     <hr>
                     <form name="topic" th:action="@{/topics/edit/{id}(id=${topic.getId()})}" method="post"
                           th:object="${topic}">
                         <div class="question-title39">
-                            <span class="form-description433">Question-Title* </span>
+                            <span class="form-description433">Toppic-Title* </span>
                             <label>
                                 <input type="text" name="title" class="question-tile32" th:field="*{title}"
                                        th:value="${topic.getTitle()}">
