--- a/src/main/resources/templates/fragments/top_users_sidebar.html
+++ b/src/main/resources/templates/fragments/top_users_sidebar.html
@@ -8,7 +8,8 @@
 
 <div th:fragment="topusers">
     <div class="highest-part302">
-        <h4>Highest Points</h4>
+        <h4>Top users</h4>
+
         <div class="pints-wrapper">
             <div class="left-user3898">
                 <a href="#"><img src="/assets/img/images.png" alt="Image"></a>
