change url for getting posts-topic for certain user from profile/{id} to /topic-posts/{id}

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -37,6 +37,9 @@
                         <a href="#" th:href="@{/users/profile}">
                             <p th:text="#{navigation.edit_profile}"></p>
                         </a>
+                        <a href="#" th:href="@{/users/admin-panel}">
+                            <p th:text="#{navigation.admin_panel}"></p>
+                        </a>
                         <a href="#" th:href="@{/contact_us}">
                             <p th:text="#{navigation.contact_us}"></p>
                         </a>
