--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -48,7 +48,7 @@
                             <tbody>
                             <tr th:each="user : ${users}">
                                 <td>
-                                    <a th:href="@{/users/{id}(id=${user.getId()})}"
+                                    <a th:href="@{/users/topics-posts/{id}(id=${user.getId()})}"
                                        th:text="${user.getUsername()}">User</a>
                                 </td>
                                 <td th:text="${user.getEmail()}">-</td>
