Update for the post_details view to add a comment.

--- a/src/main/resources/templates/ask_question.html
+++ b/src/main/resources/templates/ask_question.html
@@ -42,7 +42,7 @@
                 <div class="ask-question-input-part032">
                     <h4>Create Topic</h4>
                     <hr>
-                    <form action="#" name="topic" th:action="@{/topics/new}" method="post" th:object="${topic}">
+                    <form name="topic" th:action="@{/topics/new}" method="post" th:object="${topic}">
                         <div class="question-title39">
                             <span class="form-description433">Topic-Title* </span>
                             <label>
