--- a/src/main/resources/templates/edit_post.html
+++ b/src/main/resources/templates/edit_post.html
@@ -45,11 +45,11 @@
     <div class="row">
       <div class="col-md-9">
         <div class="ask-question-input-part032">
-          <h4>Edit Topic Question</h4>
+          <h4>Edit Topic </h4>
           <hr>
           <form name="topic" th:action="@{/posts/edit/{id}(id=${post.getId()})}" method="post" th:object="${post}">
             <div class="question-title39">
-              <span class="form-description433">Question-Title* </span>
+              <span class="form-description433">Topic-Title* </span>
 <!--              <label>-->
 <!--                <input type="text" name="title" class="question-tile32" th:field="*{title}" th:value="${topic.getTitle()}">-->
 <!--              </label>-->
@@ -140,12 +140,12 @@
               </div>
             </div>
 
-            <div class="question-title39">
-              <span class="form-description433">Tags </span>
+<!--            <div class="question-title39">-->
+<!--              <span class="form-description433">Tags </span>-->
 <!--              <label>-->
 <!--                <input type="text" name="tags" class="question-tile32" th:field="*{tags}" th:value="${topic.getTags()}">-->
 <!--              </label>-->
-            </div>
+<!--            </div>-->
             <div class="publish-button2389">
               <input type="submit" value="Submit" class="publish1291">
             </div>
