Parsing content text to apply attributes

--- a/src/main/resources/templates/contact_us.html
+++ b/src/main/resources/templates/contact_us.html
@@ -50,12 +50,12 @@
                                                                                       class="username029"
                                                                                       placeholder="Enter your Name">
                         </div>
-                        <div class="email-part320">
+                        <div class="username-part940">
                             <span class="form-description442">E-Mail* </span><input type="text" name="fname"
                                                                                     class="email30"
                                                                                     placeholder="Enter Your Email">
                         </div>
-                        <div class="question-title39">
+                        <div class="username-part940">
                             <span class="form-description433">Title* </span><input type="text" name="fname"
                                                                                    class="question-ttile321"
                                                                                    placeholder="Write Your Question Title">
@@ -66,10 +66,10 @@
                                       placeholder="Type the description thoroughly and in detail .">
                         </textarea>
                         </div>
+                        <div class="publish-button2389">
+                            <button type="button" class="publish1291">Publish your Question</button>
+                        </div>
                     </form>
-                    <div class="publish-button2389">
-                        <button type="button" class="publish1291">Publish your Question</button>
-                    </div>
 
                 </div>
 
