--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -12,7 +12,8 @@
                 <div class="col-md-3">
                     <div class="info-part-one320">
                         <h4>Who are we ?</h4>
-                        <p>Telerik and Kendo UI are part of Progress product portfolio. Progress is the leading provider of application development and digital experience technologies.</p>
+                        <p>Telerik and Kendo UI are part of Progress product portfolio. Progress is the leading provider
+                            of application development and digital experience technologies.</p>
                         <h4>Address :</h4>
                         <p>A30, ul. "Krastyu Rakovski" str,
                             <br> 1729 Sofia, Bulgaria</p>
@@ -47,7 +48,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="info-part-three320">
-                        <h4>Popular Questions</h4>
+                        <h4>Popular Topics</h4>
                         <div class="news-info209">
                             <h5>Why are the British confused</h5>
                             <p>(Why I darest say, they darest not get offended when they so ...</p> <small>July 16,
@@ -58,7 +59,8 @@
                             2017</small></div>
                         <div class="news-info209">
                             <h5>How to evaluate whether a</h5>
-                            <p>A friend of mine is the CEO of his own small business. ...</p> <small>July 16, 2017</small>
+                            <p>A friend of mine is the CEO of his own small business. ...</p> <small>July 16,
+                            2017</small>
                         </div>
                     </div>
                 </div>
@@ -66,21 +68,28 @@
                     <div class="info-part-four320">
                         <h4>Latest Tweets</h4>
                         <div class="tweet-details29">
-                            <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="https://twitter.com/ForumsSxTelerik" th:href="@{https://twitter.com/ForumsSxTelerik}">codeThemesCheck a new
-                                update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                                Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small>
+                            <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a
+                                    href="https://twitter.com/ForumsSxTelerik"
+                                    th:href="@{href='https://twitter.com/ForumsSxTelerik/status/1688472259952848896?ref_src=twsrc%5Etfw'}">We`re running out of time!
+                            </a></p> <small>about 2 hours ago</small>
                         </div>
                         <div class="tweet-details29">
-                            <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                                update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                                Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
+                            <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a
+                                    href="https://twitter.com/ForumsSxTelerik"
+                                    th:href="@{https://twitter.com/ForumsSxTelerik}">Telerik has no latest tweets
+                                available...
+                            </a></p> <small>about 1 minute ago</small>
+                        </div>
                         <div class="tweet-details29">
-                            <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                                update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                                Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                    </div>
+                            <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a
+                                    href="https://twitter.com/ForumsSxTelerik"
+                                    th:href="@{https://twitter.com/ForumsSxTelerik}">Telerik has no latest tweets
+                                available...
+                            </a></p> <small>about 1 minute ago</small>
+                        </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <section class="footer-social">
@@ -90,14 +99,20 @@
                     <p>Copyright 2023 - Sex forums | <strong>Team 10 @ Telerik A48 Java Cohort</strong></p>
                 </div>
                 <div class="col-md-6">
-                    <div class="social-right2389"><a href="https://twitter.com/ForumsSxTelerik" th:href="@{https://twitter.com/ForumsSxTelerik}"><i class="fa fa-twitter-square" aria-hidden="true"></i></a> <a
+                    <div class="social-right2389"><a href="https://twitter.com/ForumsSxTelerik"
+                                                     th:href="@{https://twitter.com/ForumsSxTelerik}"><i
+                            class="fa fa-twitter-square" aria-hidden="true"></i></a> <a
                             href="https://www.facebook.com/profile.php?id=100095611680778"><i class="fa fa-facebook"
-                                                                                              aria-hidden="true"></i></a> <a
-                            href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> <a href="#"><i
-                            class="fa fa-youtube" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-skype"
-                                                                                             aria-hidden="true"></i></a> <a
-                            href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-rss"
-                                                                                                          aria-hidden="true"></i></a>
+                                                                                              aria-hidden="true"></i></a>
+                        <a
+                                href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> <a href="#"><i
+                                class="fa fa-youtube" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-skype"
+                                                                                                 aria-hidden="true"></i></a>
+                        <a
+                                href="https://www.linkedin.com/company/telerik-academy/"><i class="fa fa-linkedin"
+                                                                                            aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-rss"
+                                       aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
