--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -16,7 +16,7 @@
                         <li><a href="mailto:telerikforums@gmail.com">
                             <i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a>
                         </li>
-                        <li><a href="#">
+                        <li><a href="skype:username?call">
                             <i class="fa fa-headphones" aria-hidden="true"></i>Support</a>
                         </li>
                         &nbsp;
@@ -84,20 +84,12 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#" th:href="@{/}">Home</a></li>
                     <li th:if="${session.currentUser != null}"><a href="#" th:href="@{/topics/new}">Ask Question</a></li>
-                    <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
+                    <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Social <span class="caret"></span></a>
                         <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="category.html">Question Category</a></li>
-                            <li><a href="category.html">HTML</a></li>
-                            <li><a href="category.html">CSS</a></li>
-                            <li><a href="category.html">Javascript</a></li>
-                            <li><a href="category.html">Bootstrap</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="blog.html">Blog </a></li>
+                            <li><a href="https://www.facebook.com/profile.php?id=100095611680778">Facebook</a></li>
+                            <li><a href="https://twitter.com/ForumsSxTelerik">Twitter</a></li>
+                            <li><a href="skype:telerik?call">Skype</a></li>
+                            <li><a href="https://www.linkedin.com/company/telerik-academy/">LinkedIn</a></li>
                         </ul>
                     </li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
