--- a/src/main/resources/templates/AlreadyExistsView.html
+++ b/src/main/resources/templates/AlreadyExistsView.html
@@ -2,11 +2,75 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Already exists!</title>
-  <link href="../static/Styles.css" th:href="@{/Styles.css}" rel ="stylesheet"/>
+    <title>Already Exists</title>
+    <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}">
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+    <link href="../static/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
+    <link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}">
+    <style>
+        /* Custom styles for the error container */
+        .error-container {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            max-width: 500px; /* Adjust this value to make the container bigger */
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #f8f8f8;
+        }
+
+        /* Custom styles for the home link container */
+        .home-container {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+
+        /* Custom styles for the bigger Home link */
+        .bigger-home-link {
+            width: 40px; /* Adjust this value to resize the image */
+            height: 40px;
+        }
+
+        .mid-bar {
+            background-color: #333333;
+            padding: 40px;
+        }
+
+        .top-bar {
+            position: absolute;
+            left: 0;
+            right: 0;
+            background-color: #ff7361;
+            padding: 40px;
+            width: 100%;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-<h2 th:text="#{user.already-exists}">User already exists</h2>
-<h3 class = "error" th:text="${alreadyExists}">Error placeholder</h3>
+<div class="mid-bar"></div>
+<div class="container min-vh-100">
+    <div class="home-container">
+        <a href="/" class="bigger-home-link">
+            <img src="/assets/img/flogo.png" alt="Home">
+        </a>
+    </div>
+    <div class="top-bar"></div>
+
+    <div class="error-container">
+        <h2 class="text-center" th:text="#{user.already-exists}">User Already Exists</h2>
+        <p class="text-center" th:text="${alreadyExists}">Error placeholder</p>
+        <div class="text-center">
+            <a href="/" class="btn btn-primary">Go Home</a>
+        </div>
+    </div>
+</div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="../static/js/jquery-3.1.1.min.js" th:href="@{/js/jquery-3.1.1.min.js}"></script>
+<script src="../static/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
+<script src="../static/js/npm.js" th:href="@{/js/npm.js}"></script>
 </html>
